fix: remove timestamps from sensor creation
