# src/main/java/org/STPP/AgriAutomation/data/dtos/SensorRequestDTO.java
@@ -1,8 +1,6 @@
 package org.STPP.AgriAutomation.data.dtos;
 
 import jakarta.validation.constraints.NotBlank;
-import com.fasterxml.jackson.annotation.JsonFormat;
-import java.time.LocalDateTime;
 
 public class SensorRequestDTO {
 
@@ -12,26 +10,14 @@ public class SensorRequestDTO {
     private int temperature;
     private int humidity;
 
-    /**
-     * Optional fields. If not provided, they can be set to the current time or handled accordingly.
-     */
-    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss")
-    private LocalDateTime readingTimestamp;
-
-    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss")
-    private LocalDateTime calibrationTimestamp;
-
     private int plantCareSystemId;  // Assuming you refer to PlantCareSystem by its ID
 
     public SensorRequestDTO() {}
 
-    public SensorRequestDTO(String model, int temperature, int humidity, LocalDateTime readingTimestamp,
-                            LocalDateTime calibrationTimestamp, int plantCareSystemId) {
+    public SensorRequestDTO(String model, int temperature, int humidity, int plantCareSystemId) {
         this.model = model;
         this.temperature = temperature;
         this.humidity = humidity;
-        this.readingTimestamp = readingTimestamp;
-        this.calibrationTimestamp = calibrationTimestamp;
         this.plantCareSystemId = plantCareSystemId;
     }
 
@@ -59,22 +45,6 @@ public class SensorRequestDTO {
 
     public void setHumidity(int humidity) {
         this.humidity = humidity;
-    }
-
-    public LocalDateTime getReadingTimestamp() {
-        return readingTimestamp;
-    }
-
-    public void setReadingTimestamp(LocalDateTime readingTimestamp) {
-        this.readingTimestamp = readingTimestamp;
-    }
-
-    public LocalDateTime getCalibrationTimestamp() {
-        return calibrationTimestamp;
-    }
-
-    public void setCalibrationTimestamp(LocalDateTime calibrationTimestamp) {
-        this.calibrationTimestamp = calibrationTimestamp;
     }
 
     public int getPlantCareSystemId() {
